--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-animate": "^1.6.10",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "npm": "^6.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
