--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "angular": "^1.6.10",
     "angular-animate": "^1.6.10",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "npm": "^6.0.1",
