--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/router": "^5.2.0",
     "angular": "^1.6.10",
     "angular-animate": "^1.6.10",
+    "angular4-grid": "^4.0.2",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "npm": "^6.0.1",
     "rxjs": "^5.5.6",
