--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "angular": "^1.6.10",
     "angular-animate": "^1.6.10",
     "angular4-grid": "^4.0.2",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "jquery": "^3.3.1",
+    "mongoose": "^5.1.5",
     "npm": "^6.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
