--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "^6.0.6",
+    "@angular/cdk": "^6.3.0",
+    "@angular/common": "^6.0.6",
+    "@angular/compiler": "^6.0.6",
+    "@angular/core": "^6.0.6",
+    "@angular/forms": "^6.0.6",
+    "@angular/http": "^6.0.6",
+    "@angular/material": "^6.3.0",
+    "@angular/platform-browser": "^6.0.6",
+    "@angular/platform-browser-dynamic": "^6.0.6",
+    "@angular/router": "^6.0.6",
     "angular": "^1.6.10",
     "angular-animate": "^1.6.10",
     "angular4-grid": "^4.0.2",
@@ -35,30 +36,31 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.1.5",
     "npm": "^6.0.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.2.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.6",
+    "@angular/language-service": "^6.0.6",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.3.1",
-    "@types/node": "~6.0.60",
+    "@types/node": "~10.3.5",
     "codelyzer": "^4.0.1",
     "debug": "^3.1.0",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "^1.1.0",
     "nodemon": "^1.17.5",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "protractor": "~5.3.2",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.10.0",
+    "typescript": "~2.9.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
