--- a/package.json
+++ b/package.json
@@ -13,54 +13,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.6",
-    "@angular/cdk": "^6.3.0",
-    "@angular/common": "^6.0.6",
-    "@angular/compiler": "^6.0.6",
-    "@angular/core": "^6.0.6",
-    "@angular/forms": "^6.0.6",
-    "@angular/http": "^6.0.6",
-    "@angular/material": "^6.3.0",
-    "@angular/platform-browser": "^6.0.6",
-    "@angular/platform-browser-dynamic": "^6.0.6",
-    "@angular/router": "^6.0.6",
-    "angular": "^1.6.10",
-    "angular-animate": "^1.6.10",
-    "angular4-grid": "^4.0.2",
+    "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/material": "^6.0.2",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.4",
     "express": "^4.16.3",
-    "file-system": "^2.2.2",
-    "fs": "0.0.1-security",
-    "jquery": "^3.3.1",
     "mongoose": "^5.1.5",
-    "npm": "^6.0.1",
-    "rxjs": "^6.2.1",
-    "zone.js": "^0.8.19"
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.6",
-    "@angular/language-service": "^6.0.6",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.1",
-    "@types/node": "~10.3.5",
-    "codelyzer": "^4.0.1",
-    "debug": "^3.1.0",
-    "jasmine-core": "~3.1.0",
+    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular/cli": "~6.0.1",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^1.1.0",
-    "nodemon": "^1.17.5",
-    "protractor": "~5.3.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.10.0",
-    "typescript": "~2.9.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.17.4",
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
