--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,6 @@
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.0",
-    "mongoose": "^5.1.7",
+    "mongoose": "^5.1.7"
   }
 }
