--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lantern-dragon-v2",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,12 +13,15 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod",
     "start:server": "nodemon ./server/server.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
     "@angular/cdk": "^6.0.0",
+    "@angular/cli": "~6.0.1",
+    "@angular/compiler-cli": "^6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
@@ -30,6 +37,7 @@
     "express": "^4.16.3",
     "mongodb": "^3.1.0",
     "mongoose": "^5.1.7",
+    "typescript": "~2.7.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -42,6 +50,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
