--- a/angular.json
+++ b/angular.json
@@ -102,7 +102,7 @@
       }
     },
     "lantern-dragon-v2-e2e": {
-      "root": "",
+      "root": "e2e",
       "sourceRoot": "e2e",
       "projectType": "application",
       "architect": {
