--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "@angular/animations": "^6.0.0",
     "@angular/cdk": "^6.0.0",
-    "@angular/cli": "~6.0.1",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
@@ -43,7 +42,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~6.0.1",
+    "@angular/cli": "^6.1.5",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
